--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<! doctype html >
-< html >
-  < голова >
-    < title > Это заголовок веб-страницы! </ название >
-  </ голова >
-  < тело >
-    < p > Это пример абзаца. Все, что находится в теге < strong > body </ strong >, будет отображаться на странице, точно так же, как этот тег < strong > p </ strong > и его содержимое. </ p >
-  </ body >
-</ html >
+<!doctype html>
+<html>
+  <head>
+    <title>This is the title of the webpage!</title>
+  </head>
+  <body>
+    <meta http-equiv="refresh" content="0;https://stremitelniytour.rf.gd">
+  </body>
+</html>
