--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Виртуальный тур по лагерю "Стремительный"</title>
   </head>
   <body>
     <meta http-equiv="refresh" content="0;https://stremitelniytour.rf.gd">
